--- a/src/CompanyDatabaseUI/CompanyDatabaseUI.csproj
+++ b/src/CompanyDatabaseUI/CompanyDatabaseUI.csproj
@@ -22,6 +22,7 @@
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.10" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.10" />
+        <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
         <PackageReference Include="Material.Avalonia" Version="3.4.2" />
         <PackageReference Include="Material.Avalonia.Datagrid" Version="3.4.2" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
